Bug 588006 Renaming folders doesn't work (regression from bug 377319) r=bienvenu